Bug 1418505 - Make filtered unclassified count visible again
This was broken by the Bootstrap 4 upgrade and I missed it.

--- a/ui/css/treeherder-navbar.css
+++ b/ui/css/treeherder-navbar.css
@@ -395,6 +395,10 @@ fieldset[disabled] .btn-view-nav-closed.active {
   cursor: default;
 }
 
+.navbar-badge.badge {
+  margin: 0 5px;
+}
+
 #notification-dropdown {
   min-width: 25em;
   max-height: 20em;
